# argy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-android.yml  ci-freebsd.yml  ci-ios.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
examples/: example_basic.cpp  example_named.cpp  example_template.cpp
include/: argy.hpp
tests/: CMakeLists.txt  test_argy.cpp
